Fixed gap

--- a/src/scss/_xlarge.scss
+++ b/src/scss/_xlarge.scss
@@ -153,6 +153,9 @@
 			padding: 0;
 		}
 	}
+	.gap {
+		gap: 15em;
+	}
 
 	.circle-effect {
 		width: 30em;
